@@ -4,6 +4,7 @@
 ; License GNU General Public License version 2 or later; see LICENSE.txt, see LICENSE.php
 ; Note : All ini files need to be saved as UTF-8
 
+ADMIN MENU="Admin menu"
 MOD_MENU_COM_CONTENT="Content"
 MOD_MENU_COM_CONTENT_NEW_CATEGORY="Add New Category"
 MOD_MENU_COM_CONTENT_ARTICLES="Articles"
