@@ -4,6 +4,6 @@
 ; License GNU General Public License version 2 or later; see LICENSE.txt, see LICENSE.php
 ; Note : All ini files need to be saved as UTF-8
 
-MOD_UNREAD="mod_unread"
-THIS MODULE SHOWS A LIST OF UNREAD ITEMS="This Module shows a list of unread mail messages"
+MOD_UNREAD_XML_DESCRIPTION="This Module shows a list of unread mail messages"
 MOD_UNREAD_MESSAGES=" %d Messages"
+UNREAD_MESSAGES="Unread messages"
