@@ -3,7 +3,7 @@
 	type="module"
 	version="1.6.0"
 	client="administrator">
-	<name>Unread Items</name>
+	<name>Unread Messages</name>
 	<author>Joomla! Project</author>
 	<creationDate>Nov 2005</creationDate>
 	<copyright>Copyright (C) 2005 - 2010 Open Source Matters. All rights reserved.</copyright>
@@ -11,7 +11,7 @@
 	<authorEmail>admin@joomla.org</authorEmail>
 	<authorUrl>www.joomla.org</authorUrl>
 	<version>1.6.0</version>
-	<description>This module shows a list of unread items</description>
+	<description>MOD_UNREAD_XML_DESCRIPTION</description>
 	<files>
 		<filename module="mod_unread">mod_unread.php</filename>
 		<filename>helper.php</filename>
