@@ -33,6 +33,7 @@ $ -> Language fix or change
 ^ Refactored mod_status ini/keys. Added logged back-end users to status.
 ^ Refactored mod_submenu ini/keys.
 ^ Refactored mod_title ini/keys
+^ Refactored mod_unread ini/keys. Updated sql.
 
 08-Feb-2010 Andrew Eddie
  # Fix bug in JRegistry::setValue - documented as returning the old value, however, the behaviour is to return the set value. Changing this kills JParameter::def.
